compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_no_expression_10.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  echo\n  |> todo\n}\n"
---
error: Invalid echo use
  ┌─ /src/one/two.gleam:3:3
  │
3 │   echo
  │   ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
